--- a/src/app/position-recruitment-profile/position-recruitment-profile.component.scss
+++ b/src/app/position-recruitment-profile/position-recruitment-profile.component.scss
@@ -1,12 +1,21 @@
 .mat-form-field {
   width: 350px;
   padding-left: 50px;
-  padding-top: 50px;
 }
 
 fieldRow{
   width: 70%;
 }
 
+.alert-danger{
+  color: #a94442;
+  background-color: #f2dede;
+  border-color:#edccd1;
+}
 
+.alert{
+  width: 350px;
+  border:1px solid transparent;
+  border-radius:4px;
+}
 
