--- a/src/app/components/employees-list/employees-list.component.html
+++ b/src/app/components/employees-list/employees-list.component.html
@@ -1,6 +1,13 @@
 <div class="col col-lg-1"></div>
 <div class="col col-lg-10 employee-list">
-  <h1>Lista de Empleados</h1>
+  <div class="col col-lg-12">
+    <h1>Lista de Empleados</h1>
+    <button type="button" class="btn btn-default create-employees"
+            routerLink="/employee-creation-form">
+      Registrar nuevo empleado
+      <span class="glyphicon glyphicon-plus"></span>
+      </button>
+  </div>
   <table class="table table-striped">
     <thead>
       <tr>
