--- a/src/app/components/employees-list/employees-list.component.css
+++ b/src/app/components/employees-list/employees-list.component.css
@@ -38,4 +38,30 @@ span {
   color: white;
 }
 
+h1 {
+  width: 600px;
+  float: left;
+  margin-bottom: 30px;
+}
 
+.create-employees {
+  float: right;
+  margin-top: 15px;
+  background-color: #308C88;
+  color: white;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-top: 30px;
+}
+
+.create-employees:hover {
+  background-color: white;
+  color: #308C88;
+  border: 2px solid #308C88;
+  box-sizing: border-box;
+}
+
+span {
+  margin-left: 5px;
+  margin-right: 5px;
+}
