--- a/src/app/components/employees-list/employees-list.component.html
+++ b/src/app/components/employees-list/employees-list.component.html
@@ -1,14 +1,12 @@
 <div class="col col-lg-1"></div>
-<div class="col col-lg-10 employee-list">
-  <div class="col col-lg-12">
-    <h1>Lista de Empleados</h1>
-    <button type="button" class="btn btn-default create-employees"
-            routerLink="/employee-creation-form">
-      Registrar nuevo empleado
-      <span class="glyphicon glyphicon-plus"></span>
-      </button>
-  </div>
-  <table class="table table-striped">
+<div class="col col-lg-10">
+  <h1>Lista de Empleados</h1>
+  <button type="button" class="btn btn-default create-employees"
+          routerLink="/employee-creation-form">
+    Registrar nuevo empleado
+    <span class="glyphicon glyphicon-plus"></span>
+  </button>
+  <table class="table table-striped employee-list">
     <thead>
       <tr>
         <th class="employee-list-header">Nombre</th>
