--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -11,6 +11,7 @@ $background-pale: #D1C4E9;
 .footer {
   background-color: $background-pale;
   @include zero-margin(20px, 0px);
+  width: 100%;
 }
 
 .btn-facebook {
