--- a/src/app/components/employees-list/employees-list.component.html
+++ b/src/app/components/employees-list/employees-list.component.html
@@ -1,10 +1,10 @@
 <div class="col col-lg-1"></div>
 <div class="col col-lg-10">
-  <h1>Lista de Empleados</h1>
+  <h1 class="employee-title">Lista de Empleados</h1>
   <button type="button" class="btn btn-default create-employees"
           routerLink="/employee-creation-form">
     Registrar nuevo empleado
-    <span class="glyphicon glyphicon-plus"></span>
+    <span class="glyphicon glyphicon-plus employee-list-span"></span>
   </button>
   <table class="table table-striped employee-list">
     <thead>
@@ -27,3 +27,6 @@
     </tbody>
   </table>
 </div>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
