--- a/src/app/components/employees-list/employees-list.component.css
+++ b/src/app/components/employees-list/employees-list.component.css
@@ -5,7 +5,7 @@
   margin: 5px;
   box-sizing: border-box;
 }
-span {
+.employee-list span {
   float: left;
 }
 .listed-employee {
@@ -38,7 +38,7 @@ span {
   color: white;
 }
 
-h1 {
+.employee-list h1 {
   width: 600px;
   float: left;
   margin-bottom: 30px;
@@ -61,7 +61,12 @@ h1 {
   box-sizing: border-box;
 }
 
-span {
+.employee-list-span {
   margin-left: 5px;
   margin-right: 5px;
+}
+
+.employee-title {
+  width: 400px;
+  float: left;
 }
