--- a/src/app/assign-equipment/assign-equipment.component.html
+++ b/src/app/assign-equipment/assign-equipment.component.html
@@ -1,3 +1,46 @@
 <p>
   assign-equipment works!
 </p>
+
+<mat-card>
+  <form #assignEqForm="ngForm" (ngSubmit)="save(assignEqForm.value)">
+    <mat-card-header>
+      <mat-card-title><h2>{{assignEquip.id ? 'Edit' : 'Add'}} Asignar Equipo al Personal</h2></mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="fieldRow">
+        <input type="hidden" name="id" [(ngModel)]="assignEquip.id">
+        <mat-form-field>
+          <mat-select placeholder="Employee" [(ngModel)]="assignEquip.idEmployee" name="idEmployee">
+            <mat-option>None</mat-option>
+            <mat-option *ngFor="let employee of employees" [value]="employee.id">
+              {{employee.fullName}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="fieldRow">
+        <mat-form-field>
+          <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </div>
+      <div class="fieldRow">
+        <mat-form-field>
+          <input matInput placeholder="Description" [(ngModel)]="assignEquip.description"
+                 required name="description" #description>
+        </mat-form-field>
+      </div>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" type="submit"
+              [disabled]="!assignEqForm.form.valid">Save</button>
+      <button mat-raised-button (click)="remove(assignEquip.id)" color="secondary"
+              *ngIf="assignEquip.id" type="button">Delete</button>
+      <a mat-button (click)="gotoList()">Cancel</a>
+    </mat-card-actions>
+  </form>
+</mat-card>
+
+
