add validation of null and some changes por position and recruitment profile

--- a/src/app/position/position.component.scss
+++ b/src/app/position/position.component.scss
@@ -41,7 +41,7 @@ fieldRowPurpose{
   width: 100%;
 }
 .profileDescription{
-  padding: 0px;
+  padding:0 5px 0 0;
   margin: 0px;
   float: left;
 }
