--- a/src/app/position-list/position-list.component.html
+++ b/src/app/position-list/position-list.component.html
@@ -12,6 +12,7 @@
         <div class="descriptionList"><h3>Created On</h3></div>
         <div class="descriptionList"><h3>Recruitment Profile</h3></div>
         <div class="descriptionList"><h3>Area</h3></div>
+        <div class="descriptionList"><h3>Performance</h3></div>
       </mat-list-item>
       <mat-list-item *ngFor="let position of positions" class="myTableRow">
         <div class="numberList" ><h3 mat-line >{{position.id}}</h3></div>
@@ -28,6 +29,9 @@
         </div>
         <div class="descriptionList">
           <p>{{position.areaName}}</p>
+        </div>
+        <div class="descriptionList">
+          <p>{{position.performanceName}}</p>
         </div>
       </mat-list-item>
     </mat-list>
