--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,20 +1,63 @@
 <div class="container"
-     fxLayout="row"
-     fxLayout.sm="column"
-     fxLayout.xs="column"
-     fxLayoutAlign.gt-md="space-around center"
-     fxLayoutGap="10px"
-     fxLayoutGap.xs="0">
-  <h1 mat-line> PROYECTOS DE LA EMPRESA</h1>
+     fxLayout="column">
 
-  <span>
-    <mat-list >
-      <ul>
-        <li *ngFor=" let project of projects"> proyecto: {{project}} </li>
-      </ul>
-      <!--<mat-list-item *ngFor="let proyect for projects"> </mat-list-item>-->
-    </mat-list>
-  </span>
+  <div fxFlex>
+    <div>
+      <h3>List of Projects</h3>
+      <hr>
+    </div>
+  </div>
+
+  <div fxFlex>
+  <div class="example-container mat-elevation-z8">
+    <mat-table #table [dataSource]="dataSource">
+
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="position">
+        <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="weight">
+        <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="symbol">
+        <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+      </ng-container>
+
+      <!-- Options  Column -->
+      <ng-container matColumnDef="options">
+        <mat-header-cell *matHeaderCellDef> Options </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <button mat-button  (click)="editMember(element)"><span class="fa fa-edit fa-lg"></span>Edit</button>
+          <button mat-button  (click)="detailProject(element)"><span class="fa fa-info fa-lg"></span>Details</button>
+          <button mat-button  (click)="deleteProject(element)"><span class="fa fa-trash  fa-lg"></span>Delete</button>
+        </mat-cell>
+      </ng-container>
+
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+
+
+    </mat-table>
+  </div>
+  </div>
+
+
 </div>
 
 
