add title  list  project

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -17,6 +17,7 @@
 
     <div fxFlex>
       <div class="example-container mat-elevation-z8">
+        <h1> Lis Projects By Gestion</h1>
         <mat-table #table [dataSource]="projects">
 
           <!-- id Column -->
@@ -58,8 +59,6 @@
     <mat-spinner></mat-spinner>
     <h4>Loading . . . Please Wait</h4>
   </div>
-
-
 
 </div>
 
