--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -17,7 +17,7 @@
 
     <div fxFlex>
       <div class="example-container mat-elevation-z8">
-        <h1> Lis Projects By Gestion</h1>
+        <h1> LIST OF PROJECTS </h1>
         <mat-table #table [dataSource]="projects">
 
           <!-- id Column -->
