[employee accident] agregar select con referencia a los empleados y los accidentes

--- a/src/app/employee-accident/employee-accident-list/employee-accident-list.component.html
+++ b/src/app/employee-accident/employee-accident-list/employee-accident-list.component.html
@@ -3,7 +3,7 @@
   <span>Employees Accidents </span>
   <span class="spacer"></span>
   Reload data:
-  <button mat-icon-button (click)="refresh()">
+  <button mat-icon-button (click)="refreshTable()">
     <mat-icon>refresh</mat-icon>
   </button>
 </mat-toolbar>
