--- a/src/app/employee-accident/employee-accident-add/employee-accident-add.component.html
+++ b/src/app/employee-accident/employee-accident-add/employee-accident-add.component.html
@@ -26,13 +26,26 @@
       </mat-form-field>
     </div>
 
+
     <div class="form">
-      <mat-form-field color="primary">
-        <textarea matInput #input class="form-control" placeholder="id Employee" [(ngModel)]="data.idEmployee" name="idEmployee" required ></textarea>
-        <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
+      <mat-form-field>
+        <mat-select placeholder="Select  Accident" [(ngModel)]="data.idAccident" name="idAccident">
+          <mat-option *ngFor="let accident of accidents" [value]="accident.id">
+            {{accident.description_accident}}
+          </mat-option>
+        </mat-select>
       </mat-form-field>
     </div>
 
+    <div class="form">
+      <mat-form-field>
+        <mat-select placeholder="Select Employee" [(ngModel)]="data.idEmployee" name="idEmployee">
+          <mat-option *ngFor="let employee of employees" [value]="employee.id">
+            {{employee.firstName}} {{employee.lastName}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
 
     <div mat-dialog-actions>
       <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="confirmAdd()">Save</button>
