--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+//@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 
 $lt-gray: #ddd;
 $background-dark: #512DA8;
