--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,4 @@
     </div>
   </div>
 </div>
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
-
->>>>>>>  typeEquipment ui
+</div>
