--- a/src/app/employee-list-assignequip/employee-list-assignequip.component.html
+++ b/src/app/employee-list-assignequip/employee-list-assignequip.component.html
@@ -5,18 +5,18 @@
 <mat-card>
   <mat-card-header><mat-card-title><h2>List Equipment Assign</h2></mat-card-title></mat-card-header>
   <mat-card-content>
-    <mat-list class="myTable">
-      <mat-list-item class="tableHeader">
-        <div class="numberList">
+    <mat-list>
+      <mat-list-item>
+        <div>
           <h3>ID</h3>
         </div>
-        <div class="descriptionList">
+        <div>
           <h3>Employee Name</h3>
         </div>
-        <div class="descriptionList"><h3>Assign Date</h3></div>
-        <div class="descriptionList"><h3>Equipment</h3></div>
+        <div><h3>Assign Date</h3></div>
+        <div><h3>Equipment</h3></div>
       </mat-list-item>
-      <mat-list-item *ngFor="let assignEquip of assignEquips" class="myTableRow">
+      <mat-list-item *ngFor="let assignEquip of assignEquips">
         <div class="numberList">
           <h3>{{assignEquip.id}}</h3>
         </div>
