--- a/src/app/employee-list-assignequip/employee-list-assignequip.component.html
+++ b/src/app/employee-list-assignequip/employee-list-assignequip.component.html
@@ -1,39 +1,56 @@
-<p>
-  employee-list-assignequip works!
-</p>
+<div class="container" fxLayout="column">
 
-<mat-card>
-  <mat-card-header><mat-card-title><h2>List Equipment Assign</h2></mat-card-title></mat-card-header>
-  <mat-card-content>
-    <mat-list>
-      <mat-list-item>
-        <div>
-          <h3>ID</h3>
-        </div>
-        <div>
-          <h3>Employee Name</h3>
-        </div>
-        <div><h3>Assign Date</h3></div>
-        <div><h3>Equipment</h3></div>
-      </mat-list-item>
-      <mat-list-item *ngFor="let assignEquip of assignEquips">
-        <div class="numberList">
-          <h3>{{assignEquip.id}}</h3>
-        </div>
-        <div class="descriptionList">
-          <p>{{assignEquip.fullNameEmployee}}</p>
-        </div>
-        <div class="descriptionList">
-          <p>{{assignEquip.dateAssign}}</p>
-        </div>
-        <div class="descriptionList">
-          <h3>
-            <a mat-button [routerLink]="['/assign-equip-employee', assignEquip.id]">Assign Equipment</a>
-          </h3>
-        </div>
-      </mat-list-item>
-    </mat-list>
-  </mat-card-content>
+  <div fxFlex class="spinner-container" *ngIf="assignEquips">
+
+    <div fxFlex>
+      <div class="example-container mat-elevation-z8">
+
+        <h1> LIST TO ASSIGN OF EQUIPMENT </h1>
+        <mat-table #tableAssignEquip [dataSource]="assignEquips" class="mat-elevation-z8">
+
+          <ng-container matColumnDef="id">
+            <mat-header-cell mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let assignEquip"> {{assignEquip.id}} </mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="fullName">
+            <mat-header-cell mat-header-cell *matHeaderCellDef> Full Name </mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let assignEquip"> {{assignEquip.fullNameEmployee}} </mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="assignDate">
+            <mat-header-cell mat-header-cell *matHeaderCellDef> Assign Date </mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let assignEquip"> {{assignEquip.dateAssign}} </mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="description">
+            <mat-header-cell mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let assignEquip"> {{assignEquip.description}} </mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="giveEquip">
+            <mat-header-cell mat-header-cell *matHeaderCellDef> Assign Equipment </mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let assignEquip"> <a mat-button [routerLink]="['/assign-equip-employee', assignEquip.id]"><span class="fa fa-wrench"></span>Assign Equipment</a> </mat-cell>
+          </ng-container>
+
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+
+      </div>
+    </div>
+    <br>
+  </div>
+
+  <div [hidden]="assignEquips">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
+
+</div>
+
+<div>
   <button mat-raised-button color="primary" [routerLink]="['/assign-equipment-add']">ADD</button>
-</mat-card>
 
+  <br><br>
+</div>
