--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,13 @@
   <button mat-button [matMenuTriggerFor]="positions"><span class="fa fa-list fa-lg"></span> Position</button>
  <a mat-button routerLink="/type-equipment"><span class="fa fa-list fa-lg"></span> Type Equipment</a>
   <a mat-button routerLink="/employees-list" class="employees-icon"><span class="glyphicon glyphicon-book"></span> Employees</a>
+
   <a mat-button routerLink="/projects"><span class="fa fa-building"></span> Projects</a>
   <a mat-button routerLink="/employee-list-assignequip"><span class="fa fa-screwdriver"></span> Assign Equipment</a>
+
+  <a mat-button routerLink="/projects" class="fa fa-building"><span class="glyphicon glyphicon-book"></span> Projects</a>
+  <button mat-button [matMenuTriggerFor]="accidentes"><span class="fa fa-list fa-lg"></span> Accidentes</button>
+
   <span class="flex-spacer"></span>
    <span class="flex-spacer"></span>
   <a mat-button (click)="openLoginForm()"><span class="fa fa-sign-in fa-lg"></span> Login</a>
@@ -15,6 +20,13 @@
   <a mat-button routerLink="/positionList"><span class="fa fa-address-card fa-lg"></span> Positions</a>
   <a mat-button routerLink="/profileList"><span class="fa fa-address-card fa-lg"></span> Recruitment Profile</a>
   <a mat-button routerLink="/positionTypeEvaluatorList"><span class="fa fa-address-card fa-lg"></span> Types Evaluators</a>
+</mat-menu>
+<mat-menu #accidentes="matMenu">
+  <a mat-button routerLink="/accident-list"><span class="fa fa-address-card fa-lg"></span> Lista de Accidentes</a>
+  <a mat-button routerLink="/accident-record"><span class="fa fa-address-card fa-lg"></span> Registro de Accidentes</a>
+  <a mat-button routerLink="/accident-type"><span class="fa fa-address-card fa-lg"></span> Tipos de Accidentes</a>
+  <a mat-button routerLink="/accident-cause-group"><span class="fa fa-address-card fa-lg"></span> Causas de
+    Accidentes</a>
 </mat-menu>
 <div class="container jumbotron"
      fxLayout="row"
