add module componet employeeaccident

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -58,6 +58,9 @@
     </mat-card>
   </div>
 
+  <div class="container" style="width:100%">
+    <app-employee-accident-list style="width:80%; margin: 0 auto;"></app-employee-accident-list>
+  </div>
 
   <div fxFlex>
     <h2>Employees</h2>
