--- a/src/app/components/employees-list/employees-list.component.html
+++ b/src/app/components/employees-list/employees-list.component.html
@@ -1,10 +1,17 @@
 <div class="col col-lg-1"></div>
 <div class="col col-lg-10">
   <h1 class="employee-title">Lista de Empleados</h1>
+
   <button type="button" class="btn btn-default create-employees"
           routerLink="/employee-creation-form">
     Registrar nuevo empleado
     <span class="glyphicon glyphicon-plus employee-list-span"></span>
+  </button>
+
+  <button type="button" class="btn btn-default create-employees"
+          routerLink="/employee-reports">
+    Reportes Empleado
+    <span class="glyphicon glyphicon-folder-open employee-list-span"></span>
   </button>
   <table class="table table-striped employee-list">
     <thead>
