add validation of null and some changes por position and recruitment profile

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,7 @@
   <a mat-button routerLink="/positionList"><span class="fa fa-address-card fa-lg"></span> Positions</a>
   <a mat-button routerLink="/profileList"><span class="fa fa-address-card fa-lg"></span> Recruitment Profile</a>
   <a mat-button routerLink="/positionTypeEvaluatorList"><span class="fa fa-address-card fa-lg"></span> Types Evaluators</a>
+  <a mat-button routerLink="/position-report/0"><span class="fa fa-address-card fa-lg"></span> Position Report</a>
 </mat-menu>
 <mat-menu #accidentes="matMenu">
   <a mat-button routerLink="/accident-list"><span class="fa fa-address-card fa-lg"></span> Lista de Accidentes</a>
