--- a/src/app/employee-list-assignequip/employee-list-assignequip.component.html
+++ b/src/app/employee-list-assignequip/employee-list-assignequip.component.html
@@ -33,6 +33,11 @@
             <mat-cell mat-cell *matCellDef="let assignEquip"> <a mat-button [routerLink]="['/assign-equip-employee', assignEquip.id]"><span class="fa fa-wrench"></span>Assign Equipment</a> </mat-cell>
           </ng-container>
 
+          <ng-container matColumnDef="editAssign">
+            <mat-header-cell mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let assignEquip"> <a mat-button [routerLink]="['/assign-equipment-edit', assignEquip.id]"><span class="fa fa-edit"></span>Edit</a> </mat-cell>
+          </ng-container>
+
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
